fix wrap

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -23,6 +23,7 @@ output {
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 output > div {
